api-gateway/envoy-prod.yaml
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.fixed_heap"
      typed_config:
        "@type": type.googleapis.com/envoy.config.resource_monitor.fixed_heap.v2alpha.FixedHeapConfig
        max_heap_size_bytes: 524288000 # 500 MiB
  actions:
    - name: "envoy.overload_actions.shrink_heap"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.95
    - name: "envoy.overload_actions.stop_accepting_requests"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.98

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: {address: 0.0.0.0, port_value: 10000}
      listener_filters:
        - name: "envoy.filters.listener.tls_inspector"
          typed_config: {}
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                use_remote_address: true
                common_http_protocol_options:
                  idle_timeout: 3600s # 1 hour
                  headers_with_underscores_action: reject_request
                http2_protocol_options:
                  max_concurrent_streams: 100
                  initial_stream_window_size: 65536 # 64 KiB
                  initial_connection_window_size: 1048576 # 1 MiB
                stream_idle_timeout: 300s # 5 mins
                request_timeout: 300s # 5 mins
                route_config:
                  virtual_hosts:
                    - name: default
                      domains: ["*.plantdex.ml"]
                      routes:
                        - match: {prefix: "/plants"}
                          route: {cluster: plants-app, idle_timeout: 15s}
                        - match: {prefix: "/users"}
                          route: {cluster: users-app, idle_timeout: 15s}
                http_filters:
                  - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  certificate_chain: {filename: "/etc/tls/fullchain.pem"}
                  private_key: {filename: "/etc/tls/privkey.pem"}
                alpn_protocols: ["h2"]
                tls_params:
                  tls_minimum_protocol_version: "TLSv1_3"

  clusters:
    - name: plants-app
      connect_timeout: 15s
      type: logical_dns
      dns_lookup_family: v4_only
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      load_assignment:
        cluster_name: plants-app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: plants-app, port_value: 443}
      http2_protocol_options:
        initial_stream_window_size: 65536 # 64 KiB
        initial_connection_window_size: 1048576 # 1 MiB
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: plants-app
    - name: users-app
      connect_timeout: 15s
      type: logical_dns
      dns_lookup_family: v4_only
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      load_assignment:
        cluster_name: users-app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: users-app, port_value: 443}
      http2_protocol_options:
        initial_stream_window_size: 65536 # 64 KiB
        initial_connection_window_size: 1048576 # 1 MiB
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: plants-app

layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
        overload:
          global_downstream_max_connections: 50000
